--- a/swap2/index.html
+++ b/swap2/index.html
@@ -1,4 +1,5 @@
-<!DOCTYPE html><html lang="en"><head><meta charset="UTF-8"><meta http-equiv="X-UA-Compatible"content="IE=edge"><meta name="viewport"content="width=device-width, initial-scale=1.0"><title>swap</title><script src="https://mis320.github.io/xiamicommunity/jquery-3.3.1.min.js"></script><script src="https://mis320.github.io/xiamicommunity/web3.min.js"></script><script src="https://mis320.github.io/xiamicommunity/ethers-v4.min.js"></script><script src="https://mis320.github.io/xiamicommunity/erc20Abi.js"></script><script src="https://mis320.github.io/transfer/swap2/buyandsell.js"></script><script src="https://mis320.github.io/transfer/swap2/nodes.js"></script></head><body><span>私钥</span><br><div id=""><textarea name=""id="key"cols="80"rows="4"></textarea></div><span>花费多少BNB</span><br><div id=""><textarea name=""id="fee"cols="80"rows="2">0.05</textarea></div><span>合约地址</span><br><div id=""><textarea name=""id="contract"cols="80"rows="2"></textarea></div><span>循环时间(>=100)</span><br><div id=""><textarea name=""id="time"cols="80"rows="2">160</textarea></div><div><span>大于多少BNB执行购买</span><br><div id=""><textarea name=""id="poolminETH"cols="80"rows="2">15</textarea></div><span>or大于多少USDT执行购买</span><br><div id=""><textarea name=""id="poolminUSDT"cols="80"rows="2">4000</textarea></div><span>gasPrice(默认)</span><br><div id=""><textarea name=""id="gasprice"cols="80"rows="2">5.1</textarea></div><span>sellRatio(模拟卖出比例<=80(整数))</span><div id=""><textarea name=""id="sellRatio"cols="80"rows="2">49</textarea></div></div><span>调用结果</span><br><div id=""><textarea name=""id="res"cols="80"rows="5">。。。。。。。。。</textarea></div><button onclick="allbuy()">轮询买入</button></button><button onclick="approve()">授权swap</button></button><br><br><!--<button onclick="sell()">卖出</button>--><button onclick="test()">调用</button></button><button onclick="cx()">检查合约状态</button></button></button><!--<button onclick="cxtl()">查询套利</button></button>--><br><br><button onclick="sell()">轮询翻倍卖出一半</button></button></button><button onclick="sell2(2)">卖出一半</button></button><button onclick="sell2(1)">全部卖出</button></button><br><br><br><br><br></body><Script>let factoryContract
+<!DOCTYPE html><html lang="en"><head><meta charset="UTF-8"><meta http-equiv="X-UA-Compatible"content="IE=edge"><meta name="viewport"content="width=device-width, initial-scale=1.0"><title>swap</title><script src="https://mis320.github.io/xiamicommunity/jquery-3.3.1.min.js"></script><script src="https://mis320.github.io/xiamicommunity/web3.min.js"></script><script src="https://mis320.github.io/xiamicommunity/ethers-v4.min.js"></script><script src="https://mis320.github.io/xiamicommunity/erc20Abi.js"></script><script src="https://mis320.github.io/transfer/swap2/buyandsell.js"></script><script src="https://mis320.github.io/transfer/swap2/nodes.js"></script></head><body><span>私钥</span><br><div id=""><textarea name=""id="key"cols="80"rows="4"></textarea></div><span>花费多少BNB</span><br><div id=""><textarea name=""id="fee"cols="80"rows="2">0.05</textarea></div><span>合约地址</span><br><div id=""><textarea name=""id="contract"cols="80"rows="2"></textarea></div><span>循环间隔(>=100)</span><br><div id=""><textarea name=""id="time"cols="80"rows="2">160</textarea></div><div><span>大于多少BNB执行购买(预计池子BNB大小)</span><br><div id=""><textarea name=""id="poolminETH"cols="80"rows="2">15</textarea></div><span>or大于多少USDT执行购买(预计池子BUSDT/USDT/大小)</span><br><div id=""><textarea name=""id="poolminUSDT"cols="80"rows="2">4000</textarea></div><span>gasPrice(默认)</span><br><div id=""><textarea name=""id="gasprice"cols="80"rows="2">5.1</textarea></div><span>sellRatio(模拟卖出比例<=99(整数)防高燃烧)</span><div id=""><textarea name=""id="sellRatio"cols="80"rows="2">75</textarea></div></div><span>调用结果</span><br><div id=""><textarea name=""id="res"cols="80"rows="5">。。。。。。。。。</textarea></div><button id="allbuy"onclick="allbuy()"type="button">轮询买入</button></button><button onclick="cx()">检查合约状态</button><button id="test"onclick="test()">买入</button><br><br><br><br><br><br><br><br><br><br><br><br><br><br><!--<button onclick="cxtl()">查询套利</button></button>--><br><button id="approve"onclick="approve()">授权swap</button></button><br><br><button id="sell"onclick="sell()">轮询翻倍卖出一半</button></button></button><button id="sell2f"onclick="sell2(2)">卖出一半</button></button><button id="sell1f"onclick="sell2(1)">全部卖出</button></button><br><br><br><br><br></body><Script>function agree(){}
+let factoryContract
 let routerContract
 let WHT
 var LastAccount='';var gasp;var swapbbContract;var web3Provider;let web3x
@@ -45,7 +46,12 @@ async function cxtl(){let contract=$get("contract");contract=contract.replace(ne
 let paths=getPaths(contract);const swap=getMethods(G_ABI,gan_si_gou_zhuang_TOKEN)
 let res=await swap.Amountbuyandsell(web3x.web3.utils.toWei($get("fee"),'ether'),paths.buy,paths.sell,CX_index).call()
 console.log(res);}
-async function allbuy(){let starts=0
+function checkContract(){if($get('contract').length<15){rd.value='请输入合约地址'
+return}}
+async function allbuy(){if($get('contract').length<15){rd.value='请输入合约地址'
+return}
+allDisabled()
+let starts=0
 let G_sellRatio=$get("sellRatio")
 web3x.web3.eth.accounts.wallet.clear();let keyss=$get("key");let fee=$get("fee");let contract=$get("contract");contract=contract.replace(new RegExp(' ','g'),'')
 let poolminETH=$get("poolminETH");let poolminUSDT=$get("poolminUSDT");let settime=$get("time");let gasprice=web3x.web3.utils.toWei($get('gasprice'),'gwei')
@@ -70,10 +76,13 @@ const transferAccount=(sendcode[0]).address
 let nonce=await web3x.web3.eth.getTransactionCount(transferAccount)
 nonce=parseInt(nonce)
 console.log('nonce',nonce);if(keyss.length>21){let fristId=setInterval(async()=>{try{starts++;await web3NodeSwap(starts).safe_gan_si_gou_zhuang_buy(paths,poolminETH,poolminUSDT,G_index,G_sellRatio,true).estimateGas({from:transferAccount,value:sendHt,gasPrice:gasprice}).then(gas=>{web3NodeSwap(starts+1).gan_si_gou_zhuang_buy(paths,poolminETH,poolminUSDT,G_index).send({gas:gas,from:transferAccount,value:sendHt,chainId:CHAIN_ID,nonce:nonce,gasPrice:gasprice},function(error,res){if(error==null){console.log(new Date()+"hash: "+res);rd.value="hash："+res}})
-setTimeout(()=>{clearInterval(fristId);},400);})}catch(error){rd.value=new Date()+"模拟重试中"
-console.log(new Date()+"模拟重试中");}},settime);}else{let fristId=setInterval(async()=>{try{await swap.safe_gan_si_gou_zhuang_buy(paths,poolminETH,poolminUSDT,G_index,G_sellRatio,true).estimateGas({from:(sendcode[0]).address,value:sendHt,gasPrice:gasprice}).then(gas=>{clearInterval(fristId);swap.gan_si_gou_zhuang_buy(paths,poolminETH,poolminUSDT,G_index).send({gas:gas,from:(sendcode[0]).address,value:sendHt,gasPrice:gasprice},function(error,res){if(error==null){console.log(new Date()+"hash: "+res);rd.value="hash："+res}})})}catch(error){rd.value=new Date()+"模拟重试中"
+setTimeout(()=>{clearInterval(fristId);allEnabled()},400);})}catch(error){rd.value=new Date()+"模拟重试中"
+console.log(new Date()+"模拟重试中");}},settime);}else{let fristId=setInterval(async()=>{try{await swap.safe_gan_si_gou_zhuang_buy(paths,poolminETH,poolminUSDT,G_index,G_sellRatio,true).estimateGas({from:(sendcode[0]).address,value:sendHt,gasPrice:gasprice}).then(gas=>{clearInterval(fristId);swap.gan_si_gou_zhuang_buy(paths,poolminETH,poolminUSDT,G_index).send({gas:gas,from:(sendcode[0]).address,value:sendHt,gasPrice:gasprice},function(error,res){if(error==null){console.log(new Date()+"hash: "+res);rd.value="hash："+res}})
+allEnabled()})}catch(error){rd.value=new Date()+"模拟重试中"
 console.log(new Date()+"模拟重试中");}},settime);}}
-async function test(){let G_sellRatio=$get("sellRatio")
+async function test(){if($get('contract').length<15){rd.value='请输入合约地址'
+return}
+let G_sellRatio=$get("sellRatio")
 web3x.web3.eth.accounts.wallet.clear();let keyss=$get("key");let fee=$get("fee");let contract=$get("contract");contract=contract.replace(new RegExp(' ','g'),'')
 let poolminETH=$get("poolminETH")
 let poolminUSDT=$get("poolminUSDT")
@@ -113,7 +122,10 @@ console.log(token);let=num=await token.totalSupply().call()
 console.log(num);for(let index=0;index<sendcode.length;index++){const myaddress=(sendcode[index]).address;console.log('myaddress',myaddress);console.log('approve',ROUTER);let gas=await token.approve(ROUTER,num).estimateGas({from:myaddress})
 console.log(gas);let res=await token.approve(ROUTER,num).send({gas:gas,gasPrice:gasprice,from:myaddress},function(error,res){if(error==null){console.log(new Date()+"hash: "+res);rd.value="hash："+res}})
 console.log(res);web3x.web3.eth.accounts.wallet.clear();}}
-async function sell(){let starts=0
+async function sell(){if($get('contract').length<15){rd.value='请输入合约地址'
+return}
+allDisabled()
+let starts=0
 web3x.web3.eth.accounts.wallet.clear();let keyss=$("#key").val();let fee=$("#fee").val();let contract=$("#contract").val();contract=contract.replace(new RegExp(' ','g'),'')
 let poolminfell=$("#poolminfell").val();let settime=$("#time").val();let gasprice=web3x.web3.utils.toWei('7.2','gwei')
 console.log('gasprice',gasprice);set("qbgjfee",fee)
@@ -139,9 +151,11 @@ let minbb=ethers.utils.bigNumberify(minb).mul(80).div(100)
 const transferAccount=(sendcode[0]).address
 let nonce=await web3x.web3.eth.getTransactionCount(transferAccount)
 nonce=parseInt(nonce)
-console.log('nonce',nonce);if(keyss.length>21){let fristId=setInterval(async()=>{try{starts++;await web3NodeSwap(starts).gan_si_gou_zhuang_sell(balance,paths,minb,G_index).estimateGas({from:transferAccount,gasPrice:gasprice}).then(gas=>{web3NodeSwap(starts+1).gan_si_gou_zhuang_sell(balance,paths,minbb,G_index).send({from:transferAccount,chainId:CHAIN_ID,nonce:nonce,gas:gas+(parseInt(gas*0.1)+''),gasPrice:gasprice},function(error,res){if(error==null){console.log(new Date()+"hash: "+res);rd.value="hash："+res}})
-clearInterval(fristId);})}catch(error){rd.value=new Date()+"模拟重试中"
-console.log(new Date()+"模拟重试中");}},settime);}else{let fristId=setInterval(async()=>{try{await swap.gan_si_gou_zhuang_sell(balance,paths,minb,G_index).estimateGas({from:myaddress,gasPrice:gasprice}).then(gas=>{clearInterval(fristId);swap.gan_si_gou_zhuang_sell(balance,paths,minbb,G_index).send({from:myaddress,gas:gas,gasPrice:gasprice},function(error,res){if(error==null){console.log(new Date()+"hash: "+res);rd.value="hash："+res}})})}catch(error){rd.value=new Date()+"模拟重试中"
+console.log('nonce',nonce);if(keyss.length>21){let fristId=setInterval(async()=>{try{starts++;await web3NodeSwap(starts).gan_si_gou_zhuang_sell(balance,paths,minb,G_index).estimateGas({from:transferAccount,gasPrice:gasprice}).then(gas=>{web3NodeSwap(starts+1).gan_si_gou_zhuang_sell(balance,paths,minbb,G_index).send({from:transferAccount,chainId:CHAIN_ID,nonce:nonce,gas:(gas+parseInt(gas*0.5))+"",gasPrice:gasprice},function(error,res){if(error==null){console.log(new Date()+"hash: "+res);rd.value="hash："+res}})
+clearInterval(fristId);})
+allEnabled()}catch(error){rd.value=new Date()+"模拟重试中"
+console.log(new Date()+"模拟重试中");}},settime);}else{let fristId=setInterval(async()=>{try{await swap.gan_si_gou_zhuang_sell(balance,paths,minb,G_index).estimateGas({from:myaddress,gasPrice:gasprice}).then(gas=>{clearInterval(fristId);swap.gan_si_gou_zhuang_sell(balance,paths,minbb,G_index).send({from:myaddress,gas:(gas+parseInt(gas*0.5))+"",gasPrice:gasprice},function(error,res){if(error==null){console.log(new Date()+"hash: "+res);rd.value="hash："+res}})})
+allEnabled()}catch(error){rd.value=new Date()+"模拟重试中"
 console.log(new Date()+"模拟重试中");}},settime);}}
 async function sell2(mul){web3x.web3.eth.accounts.wallet.clear();let keyss=$("#key").val();let fee=$("#fee").val();let contract=$("#contract").val();contract=contract.replace(new RegExp(' ','g'),'')
 let poolminfell=$("#poolminfell").val();let settime=$("#time").val();let gasprice=web3x.web3.utils.toWei($get('gasprice'),'gwei')
@@ -165,7 +179,9 @@ for(let index=0;index<sendcode.length;index++){const myaddress=(sendcode[index])
 balance=ethers.utils.bigNumberify(balance).div(mul).toString()
 console.log("sell",balance);let res=await swap.getPathAmountS(balance,paths,CX_index).call()
 console.log(res);let gas=await swap.swapTokensForETHEx(balance,paths[res.MAXNUM],res.index).estimateGas({from:myaddress,gasPrice:gasprice})
-swap.swapTokensForETHEx(balance,paths[res.MAXNUM],res.index).send({from:myaddress,gas:gas,gasPrice:gasprice},function(error,res){if(error==null){console.log(new Date()+"hash: "+res);rd.value="hash："+res}})}}</script><script>function getMethods(p1,p2){if(p2==undefined){return new web3x.web3.eth.Contract(p1.abi,p1.address).methods;}else{return new web3x.web3.eth.Contract(p1,p2).methods;}}
+swap.swapTokensForETHEx(balance,paths[res.MAXNUM],res.index).send({from:myaddress,gas:(gas+parseInt(gas*0.4))+"",gasPrice:gasprice},function(error,res){if(error==null){console.log(new Date()+"hash: "+res);rd.value="hash："+res}})}}
+function allDisabled(){document.getElementById('allbuy').disabled='disabled';document.getElementById('test').disabled='disabled';document.getElementById('approve').disabled='disabled';document.getElementById('sell').disabled='disabled';document.getElementById('sell2f').disabled='disabled';document.getElementById('sell1f').disabled='disabled';}
+function allEnabled(){document.getElementById('approve').disabled=false;document.getElementById('test').disabled=false;document.getElementById('allbuy').disabled=false;document.getElementById('sell').disabled=false;document.getElementById('sell2f').disabled=false;document.getElementById('sell1f').disabled=false;}</script><script>function getMethods(p1,p2){if(p2==undefined){return new web3x.web3.eth.Contract(p1.abi,p1.address).methods;}else{return new web3x.web3.eth.Contract(p1,p2).methods;}}
 function $set(p1,p2){let t=document.getElementById(p1);t.value=p2}
 function $get(p1){let t=document.getElementById(p1);return t.value}
 function weiformeth(num,decimals){return ethers.utils.bigNumberify(num+'').div((pow(decimals)))}
