--- a/swap2/index.html
+++ b/swap2/index.html
@@ -38,11 +38,11 @@ let u=await utoken.balanceOf(pair.USDTPari).call()
 let b=await btoken.balanceOf(pair.BUSDTPari).call()
 let ctoken=getMethods(ERC20ABI,contract)
 let c=await ctoken.balanceOf(gan_si_gou_zhuang_TOKEN).call()
-let temptxt=rd.value+'\n'+'交易对池子'+'\n'+'WETH：'+web3x.web3.utils.fromWei(w,'ether')+'\n'+'USDT：'+web3x.web3.utils.fromWei(u,'ether')+'\n'+'BUSDT：'+web3x.web3.utils.fromWei(c,'ether')
+let temptxt=rd.value+'\n'+'交易对池子'+'\n'+'WETH：'+web3x.web3.utils.fromWei(w,'ether')+'\n'+'USDT：'+web3x.web3.utils.fromWei(u,'ether')+'\n'+'BUSDT：'+web3x.web3.utils.fromWei(b,'ether')
 rd.value=temptxt
 console.log(c);console.log('WETH',web3x.web3.utils.fromWei(w,'ether'))
 console.log('USDT',web3x.web3.utils.fromWei(u,'ether'))
-console.log('BUSDT',web3x.web3.utils.fromWei(c,'ether'))
+console.log('BUSDT',web3x.web3.utils.fromWei(b,'ether'))
 setTimeout(()=>{rd.value='检查完成'},8000);}
 async function cxtl(){let contract=$get("contract");contract=contract.replace(new RegExp(' ','g'),'')
 let paths=getPaths(contract);const swap=getMethods(G_ABI,gan_si_gou_zhuang_TOKEN)
