--- a/swap2/index.html
+++ b/swap2/index.html
@@ -110,7 +110,7 @@ sendcode=web3x.web3.eth.accounts.wallet}else{console.log(2);defaultacc['address'
 sendcode[0]=defaultacc
 sendcode['length']=1
 console.log(sendcode[0].address);}
-console.log("当前调用者账号: ",sendcode);const swap=getMethods(gan_si_gou_zhuang_ABi_test,gan_si_gou_zhuang_TOKEN)
+console.log("当前调用者账号: ",sendcode);const swap=getMethods(G_ABI,gan_si_gou_zhuang_TOKEN)
 swap.safe_gan_si_gou_zhuang_buy(paths,poolminETH,poolminUSDT,G_index,G_sellRatio,true,isPX).estimateGas({from:(sendcode[0]).address,value:sendHt,gasPrice:gasprice}).then(gas=>{swap.gan_si_gou_zhuang_buy(paths,poolminETH,poolminUSDT,G_index).send({gas:gas,from:(sendcode[0]).address,value:sendHt,gasPrice:gasprice},function(error,res){if(error==null){console.log(new Date()+"hash: "+res);rd.value="hash："+res}})})}
 async function approve(){web3x.web3.eth.accounts.wallet.clear();let gasprice=web3x.gasPrice
 let keyss=$get('key');var defaultacc={}
