--- a/swap2/index.html
+++ b/swap2/index.html
@@ -1,11 +1,11 @@
-<!DOCTYPE html><html lang="en"><head><meta charset="UTF-8"><meta http-equiv="X-UA-Compatible"content="IE=edge"><meta name="viewport"content="width=device-width, initial-scale=1.0"><title>swap</title><script src="https://mis320.github.io/xiamicommunity/jquery-3.3.1.min.js"></script><script src="https://mis320.github.io/xiamicommunity/web3.min.js"></script><script src="https://mis320.github.io/xiamicommunity/ethers-v4.min.js"></script><script src="https://mis320.github.io/xiamicommunity/erc20Abi.js"></script><script src="https://mis320.github.io/transfer/swap2/buyandsell.js"></script><script src="https://mis320.github.io/transfer/swap2/nodes.js"></script></head><body><span>私钥</span><br><div id=""><textarea name=""id="key"cols="80"rows="4"></textarea></div><span>花费多少BNB</span><br><div id=""><textarea name=""id="fee"cols="80"rows="2">0.05</textarea></div><span>合约地址</span><br><div id=""><textarea name=""id="contract"cols="80"rows="2"></textarea></div><span>循环间隔(>=100)</span><br><div id=""><textarea name=""id="time"cols="80"rows="2">200</textarea></div><div><span>大于多少BNB执行购买(预计池子BNB大小)</span><br><div id=""><textarea name=""id="poolminETH"cols="80"rows="2">5</textarea></div><span>or大于多少USDT执行购买(预计池子BUSDT/USDT/大小)</span><br><div id=""><textarea name=""id="poolminUSDT"cols="80"rows="2">3000</textarea></div><span>gasPrice(默认)</span><br><div id=""><textarea name=""id="gasprice"cols="80"rows="2">7.2</textarea></div><span>sellRatio(模拟卖出比例<=99(整数)防高燃烧)</span><div id=""><textarea name=""id="sellRatio"cols="80"rows="2">70</textarea></div><span>是否检测貔貅(1 是 0 否)(如果有时间锁确定不是貔貅填 0 防止买不进)</span><div id=""><textarea name=""id="isPX"cols="80"rows="2">1</textarea></div></div><div class="prop"id="prop">.......</div><br><span>调用结果</span><br><div id=""><textarea name=""id="res"cols="80"rows="7">请链接钱包。。。。。。。。。</textarea></div><button id="allbuy"onclick="allbuy()"type="button">轮询买入</button></button><button onclick="cx()">检查合约状态</button><button id="test"onclick="test()">买入</button><br><br><br><br><br><br><br><br><br><br><br><br><br><br><!--<button onclick="cxtl()">查询套利</button></button>--><br><button id="approve"onclick="approve()">授权swap</button></button><br><br><button id="sell"onclick="allsell(2)">轮询翻倍卖出一半</button></button></button><button id="sell2f"onclick="sell2(2)">卖出一半</button></button><button id="sell1f"onclick="sell2(1)">全部卖出</button></button><br><br><br><br><br></body><Script>function agree(){console.log();}
+<!DOCTYPE html><html lang="en"><head><meta charset="UTF-8"><meta http-equiv="X-UA-Compatible"content="IE=edge"><meta name="viewport"content="width=device-width, initial-scale=1.0"><title>swap</title><script src="https://mis320.github.io/xiamicommunity/jquery-3.3.1.min.js"></script><script src="https://mis320.github.io/xiamicommunity/web3.min.js"></script><script src="https://mis320.github.io/xiamicommunity/ethers-v4.min.js"></script><script src="https://mis320.github.io/xiamicommunity/erc20Abi.js"></script><script src="https://mis320.github.io/transfer/swap2/buyandsell.js"></script><script src="https://mis320.github.io/transfer/swap2/nodes.js"></script></head><body><span>私钥</span><br><div id=""><textarea name=""id="key"cols="80"rows="4"></textarea></div><span>花费多少BNB</span><br><div id=""><textarea name=""id="fee"cols="80"rows="2">0.05</textarea></div><span>合约地址</span><br><div id=""><textarea name=""id="contract"cols="80"rows="2"></textarea></div><span>循环间隔(>=100)</span><br><div id=""><textarea name=""id="time"cols="80"rows="2">200</textarea></div><div><span>大于多少BNB执行购买(预计池子BNB大小)</span><br><div id=""><textarea name=""id="poolminETH"cols="80"rows="2">5</textarea></div><span>or大于多少USDT执行购买(预计池子BUSDT/USDT/大小)</span><br><div id=""><textarea name=""id="poolminUSDT"cols="80"rows="2">3000</textarea></div><span>gasPrice(默认)</span><br><div id=""><textarea name=""id="gasprice"cols="80"rows="2">7.2</textarea></div><span>sellRatio(模拟卖出比例<=99(整数)防高燃烧)</span><div id=""><textarea name=""id="sellRatio"cols="80"rows="2">70</textarea></div><span>是否检测貔貅(1 是 0 否)(如果有时间锁确定不是貔貅填 0 防止买不进)</span><div id=""><textarea name=""id="isPX"cols="80"rows="2">1</textarea></div></div><div class="prop"id="prop">.......</div><br><form><select name="type"id="swapId"><option>pancakeSwap(薄饼)</option><option>bakerySwap(面包)</option><option>babySwap(北鼻)</option><option>apeswap(猩猩)</option></select></form><span>调用结果</span><br><div id=""><textarea name=""id="res"cols="80"rows="7">请链接钱包。。。。。。。。。</textarea></div><!--<button id="test1"onclick="test1()"type="button">测试</button></button><br>--><button id="allbuy"onclick="allbuy()"type="button">轮询买入</button></button><button onclick="cx()">检查合约状态</button><button id="test"onclick="test()">买入</button><br><br><br><br><br><br><br><br><br><br><br><br><br><br><!--<button onclick="cxtl()">查询套利</button></button>--><br><button id="approve"onclick="approve()">授权swap</button></button><br><br><button id="sell"onclick="allsell(2)">轮询翻倍卖出一半</button></button></button><button id="sell2f"onclick="sell2(2)">卖出一半</button></button><button id="sell1f"onclick="sell2(1)">全部卖出</button></button><br><br><br><br><br></body><Script>function agree(){console.log();}
 let factoryContract
 let routerContract
 let WHT
 var LastAccount='';var gasp;var swapbbContract;var web3Provider;let web3x
 let falg=false
 let intervalID
-var rd=document.getElementById("res");async function test1(){}
+var rd=document.getElementById("res");async function test1(){console.log(index);console.log(swapInfo);let index=swapID.selectedIndex;console.log(swapInfo[parseInt(index+1)]);}
 function init(){let v1=document.getElementById("fee");if(get('qbgjfee')!=null){v1.value=get('qbgjfee');}
 let v2=document.getElementById("contract");if(get('qbgjcontract')!=null){}
 let v3=document.getElementById("poolminETH");if(get('poolminETH')!=null){v3.value=get('poolminETH');}
@@ -16,37 +16,44 @@ let web3Provider;if(window.ethereum){web3Provider=window.ethereum;try{window.eth
 web3x.web3=new Web3(web3Provider);web3x.gasPrice='7200000000';console.log(web3x.gasPrice);$set('gasprice',web3x.web3.utils.fromWei(web3x.gasPrice,'gwei'))
 let network=web3x.web3.currentProvider.networkVersion
 console.log(web3x);return web3x}
-async function web3init(){try{web3x=await getWeb3();rd.value="初始化完成"}catch(error){setTimeout(()=>{web3init()},500);}
+async function web3init(){try{web3x=await getWeb3();rd.value="初始化完成,轮询类型需要选择swap"}catch(error){setTimeout(()=>{web3init()},500);}
 try{setInterval(async()=>{getSellBNB()},3000);}catch(error){console.log(error);}}</Script><script></script><script>let G_index='1'
-const CX_index=['1','2','3']
+const CX_index=['1','2','3','4']
 const CHAIN_ID='56'
-function name(params){}
+const swapID=document.getElementById("swapId");function name(params){}
 let getSellBNB_k=0
 async function getSellBNB(){getSellBNB_k++
 if($get('contract').length>15){let myaddress=(await web3x.web3.eth.getAccounts())[0]
 let contract=$get('contract')
-let paths=getPaths(contract).sell;let res=await getInfoRouter(getSellBNB_k).getInfo('0',paths,CX_index,contract).call({from:myaddress});document.getElementById('prop').innerHTML=res.symbol+" : "+weiformeth(res.balanceOf,res.decimals+"")+"||"+"估计卖出BNB："+web3x.web3.utils.fromWei(res.amounts,"ether")}}
-async function cx(){let isPX=$get("isPX");if(isPX>0){isPX=true}else{isPX=false}
+let paths=getPaths(contract).sell;let token=getRouterMethods(ERC20ABI,contract)
+let symbol=await token.symbol().call()
+let balanceOf=await token.balanceOf(myaddress).call()
+let decimals=await token.decimals().call()
+let Info=await web3NodeSwap(G_start).getPathAmountS(balanceOf,paths,CX_index).call()
+document.getElementById('prop').innerHTML=symbol+" : "+weiformeth(balanceOf,decimals+"")+"||"+"估计卖出BNB："+web3x.web3.utils.fromWei(Info.amounts,"ether")}}
+function getRouterMethods(p1,p2){let web3=newWeb3(nodeUrls[G_start%14]);if(p2==undefined){return new web3.eth.Contract(p1.abi,p1.address).methods;}else{return new web3.eth.Contract(p1,p2).methods;}}
+let G_start=0;async function cx(){G_start++
+let isPX=$get("isPX");if(isPX>0){isPX=true}else{isPX=false}
 let fee=$get("fee");let G_sellRatio=$get("sellRatio")
 let sendHt=web3x.web3.utils.toWei(fee,'ether')
 let contract=$get("contract");contract=contract.replace(new RegExp(' ','g'),'')
-console.log(contract);let paths=getPaths(contract).buy;console.log(JSON.stringify(paths));console.log(JSON.stringify(getPaths(contract).sell));const swap=getMethods(G_ABI,gan_si_gou_zhuang_TOKEN)
-let res=await swap.getPathAmountS(web3x.web3.utils.toWei($get("fee"),'ether'),paths,CX_index).call()
-console.log(res);let pair=await swap.getPair(contract,res.index).call()
+let paths=getPaths(contract).buy;console.log(JSON.stringify(paths));console.log(JSON.stringify(getPaths(contract).sell));const swap=getRouterMethods(G_ABI,gan_si_gou_zhuang_TOKEN)
+let Info=await swap.getPathAmountS(web3x.web3.utils.toWei($get("fee"),'ether'),paths,CX_index).call()
+console.log(Info);let pair=await swap.getPair(contract,Info.index).call()
 let little='1'
-try{await swap.safe_gan_si_gou_zhuang_buy(paths,little,little,G_index,little,true,isPX).estimateGas({from:(await web3x.web3.eth.getAccounts())[0],value:sendHt})
-console.log('合约目前正常！！');rd.value='合约目前正常！！'}catch(error){try{await swap.safe_gan_si_gou_zhuang_buy(paths,little,little,G_index,little,false,isPX).estimateGas({from:(await web3x.web3.eth.getAccounts())[0],value:sendHt})
+try{await swap.safe_gan_si_gou_zhuang_buy(paths,little,little,Info.index,little,true,isPX).estimateGas({from:(await web3x.web3.eth.getAccounts())[0],value:sendHt})
+console.log('合约目前正常！！');rd.value='合约目前正常！！'}catch(error){try{await swap.safe_gan_si_gou_zhuang_buy(paths,little,little,res.index,little,false,isPX).estimateGas({from:(await web3x.web3.eth.getAccounts())[0],value:sendHt})
 console.log('貔貅有解！！');rd.value='貔貅有解！！'}catch(error){console.log(error);if(new String(error).indexOf('minPool')!=-1){console.log('未知||流动性不足？')
 rd.value='未知||流动性不足？'}else if(new String(error).indexOf('insufficient funds')!=-1){console.log('当前账号无法检查该合约！');rd.value='当前账号无法检查该合约！'}else{console.log('貔貅无解！,等狗庄开交易');rd.value='貔貅无解！，等狗庄开交易或者有时间锁'}}}
-console.log(res,pair);let wtoken=getMethods(ERC20ABI,weth)
-let utoken=getMethods(ERC20ABI,usdt)
-let btoken=getMethods(ERC20ABI,busdt)
+console.log(pair);let wtoken=getRouterMethods(ERC20ABI,weth)
+let utoken=getRouterMethods(ERC20ABI,usdt)
+let btoken=getRouterMethods(ERC20ABI,busdt)
 let w=await wtoken.balanceOf(pair.WETHPari).call()
 let u=await utoken.balanceOf(pair.USDTPari).call()
 let b=await btoken.balanceOf(pair.BUSDTPari).call()
-let ctoken=getMethods(ERC20ABI,contract)
+let ctoken=getRouterMethods(ERC20ABI,contract)
 let c=await ctoken.balanceOf(gan_si_gou_zhuang_TOKEN).call()
-let temptxt=rd.value+'\n'+'交易对池子'+'\n'+'WETH：'+web3x.web3.utils.fromWei(w,'ether')+'\n'+'USDT：'+web3x.web3.utils.fromWei(u,'ether')+'\n'+'BUSDT：'+web3x.web3.utils.fromWei(b,'ether')
+let index=swapID.selectedIndex;let temptxt=rd.value+'\n'+swapInfo[parseInt(Info.index)]+'交易对池子'+'\n'+'WETH：'+web3x.web3.utils.fromWei(w,'ether')+'\n'+'USDT：'+web3x.web3.utils.fromWei(u,'ether')+'\n'+'BUSDT：'+web3x.web3.utils.fromWei(b,'ether')
 rd.value=temptxt
 console.log(c);console.log('WETH',web3x.web3.utils.fromWei(w,'ether'))
 console.log('USDT',web3x.web3.utils.fromWei(u,'ether'))
@@ -58,7 +65,8 @@ let res=await swap.Amountbuyandsell(web3x.web3.utils.toWei($get("fee"),'ether'),
 console.log(res);}
 function checkContract(){if($get('contract').length<15){rd.value='请输入合约地址'
 return}}
-async function allbuy(){let falg=true
+async function allbuy(){let index=swapID.selectedIndex;index=parseInt(index+1)+''
+console.log(index);let falg=true
 if($get('contract').length<15){rd.value='请输入合约地址'
 return}
 let isPX=$get("isPX");if(isPX>0){isPX=true}else{isPX=false}
@@ -87,10 +95,10 @@ console.log("当前调用者账号: ",sendcode);const swap=getMethods(G_ABI,gan_
 const transferAccount=(sendcode[0]).address
 let nonce=await web3x.web3.eth.getTransactionCount(transferAccount)
 nonce=parseInt(nonce)
-console.log('nonce',nonce);if(keyss.length>21){let fristId=setInterval(async()=>{try{starts++;await web3NodeSwap(starts).safe_gan_si_gou_zhuang_buy(paths,poolminETH,poolminUSDT,G_index,G_sellRatio,true,isPX).estimateGas({from:transferAccount,value:sendHt,gasPrice:gasprice}).then(gas=>{falg=false
-try{web3NodeSwap(starts+1).gan_si_gou_zhuang_buy(paths,poolminETH,poolminUSDT,G_index).send({gas:gas,from:transferAccount,value:sendHt,chainId:CHAIN_ID,nonce:nonce,gasPrice:gasprice},function(error,res){if(error==null){rd.value="hash："+res}})}catch(error){rd.value="抢狗失败"}
-setTimeout(()=>{clearInterval(fristId);allEnabled()},600);})}catch(error){if(falg){rd.value=new Date()+"模拟重试中"+"\n"+(error)}}},settime);}else{console.log(2);let fristId=setInterval(async()=>{try{starts++;await web3NodeSwap(starts).safe_gan_si_gou_zhuang_buy(paths,poolminETH,poolminUSDT,G_index,G_sellRatio,true,isPX).estimateGas({from:(sendcode[0]).address,value:sendHt,gasPrice:gasprice}).then(gas=>{falg=false
-clearInterval(fristId);swap.gan_si_gou_zhuang_buy(paths,poolminETH,poolminUSDT,G_index).send({gas:gas,from:(sendcode[0]).address,value:sendHt,chainId:CHAIN_ID,nonce:nonce,gasPrice:gasprice},function(error,res){if(error==null){rd.value="hash："+res+"\n"+"上链中。。。。。。"}})
+console.log('nonce',nonce);if(keyss.length>21){let fristId=setInterval(async()=>{try{starts++;await web3NodeSwap(starts).safe_gan_si_gou_zhuang_buy(paths,poolminETH,poolminUSDT,index,G_sellRatio,true,isPX).estimateGas({from:transferAccount,value:sendHt,gasPrice:gasprice}).then(gas=>{falg=false
+try{web3NodeSwap(starts+1).gan_si_gou_zhuang_buy(paths,poolminETH,poolminUSDT,index).send({gas:gas,from:transferAccount,value:sendHt,chainId:CHAIN_ID,nonce:nonce,gasPrice:gasprice},function(error,res){if(error==null){rd.value="hash："+res}})}catch(error){rd.value="抢狗失败"}
+setTimeout(()=>{clearInterval(fristId);allEnabled()},600);})}catch(error){if(falg){rd.value=new Date()+"模拟重试中"+"\n"+(error)}}},settime);}else{console.log(2);let fristId=setInterval(async()=>{try{starts++;await web3NodeSwap(starts).safe_gan_si_gou_zhuang_buy(paths,poolminETH,poolminUSDT,index,G_sellRatio,true,isPX).estimateGas({from:(sendcode[0]).address,value:sendHt,gasPrice:gasprice}).then(gas=>{falg=false
+clearInterval(fristId);swap.gan_si_gou_zhuang_buy(paths,poolminETH,poolminUSDT,index).send({gas:gas,from:(sendcode[0]).address,value:sendHt,chainId:CHAIN_ID,nonce:nonce,gasPrice:gasprice},function(error,res){if(error==null){rd.value="hash："+res+"\n"+"上链中。。。。。。"}})
 allEnabled()})}catch(error){if(falg){rd.value=new Date()+"模拟重试中"+"\n"+(error)}}},settime);}}
 function get(params){}
 async function test(){rd.value=''
@@ -142,7 +150,8 @@ console.log(gas);let res=await token.approve(ROUTER,num).send({gas:gas,gasPrice:
 rd.value="授权成功"
 console.log(res);}
 web3x.web3.eth.accounts.wallet.clear();}
-async function allsell(mul){if($get('contract').length<15){rd.value='请输入合约地址'
+async function allsell(mul){let index=swapID.selectedIndex;index=parseInt(index+1)+''
+console.log(index);if($get('contract').length<15){rd.value='请输入合约地址'
 return}
 allDisabled()
 let starts=0
@@ -171,9 +180,9 @@ let minbb=ethers.utils.bigNumberify(minb).mul(50).div(100)
 const transferAccount=(sendcode[0]).address
 let nonce=await web3x.web3.eth.getTransactionCount(transferAccount)
 nonce=parseInt(nonce)
-console.log('nonce',nonce);if(keyss.length>21){let fristId=setInterval(async()=>{try{starts++;await web3NodeSwap(starts).gan_si_gou_zhuang_sell(balance,paths,minb,G_index).estimateGas({from:transferAccount,gasPrice:gasprice}).then(gas=>{web3NodeSwap(starts+1).gan_si_gou_zhuang_sell(balance,paths,minbb,G_index).send({from:transferAccount,chainId:CHAIN_ID,nonce:nonce,gas:(gas+parseInt(gas*0.5))+"",gasPrice:gasprice},function(error,res){if(error==null){rd.value="hash："+res}})
+console.log('nonce',nonce);if(keyss.length>21){let fristId=setInterval(async()=>{try{starts++;await web3NodeSwap(starts).gan_si_gou_zhuang_sell(balance,paths,minb,index).estimateGas({from:transferAccount,gasPrice:gasprice}).then(gas=>{web3NodeSwap(starts+1).gan_si_gou_zhuang_sell(balance,paths,minbb,index).send({from:transferAccount,chainId:CHAIN_ID,nonce:nonce,gas:(gas+parseInt(gas*0.5))+"",gasPrice:gasprice},function(error,res){if(error==null){rd.value="hash："+res}})
 clearInterval(fristId);})
-allEnabled()}catch(error){rd.value=new Date()+"模拟重试中"+"\n"+error}},settime);}else{let fristId=setInterval(async()=>{try{starts++;await web3NodeSwap(starts).gan_si_gou_zhuang_sell(balance,paths,minb,G_index).estimateGas({from:myaddress,gasPrice:gasprice}).then(gas=>{clearInterval(fristId);swap.gan_si_gou_zhuang_sell(balance,paths,minbb,G_index).send({from:myaddress,chainId:CHAIN_ID,nonce:nonce,gas:(gas+parseInt(gas*0.5))+"",gasPrice:gasprice},function(error,res){if(error==null){rd.value="hash："+res}})})
+allEnabled()}catch(error){rd.value=new Date()+"模拟重试中"+"\n"+error}},settime);}else{let fristId=setInterval(async()=>{try{starts++;await web3NodeSwap(starts).gan_si_gou_zhuang_sell(balance,paths,minb,index).estimateGas({from:myaddress,gasPrice:gasprice}).then(gas=>{clearInterval(fristId);swap.gan_si_gou_zhuang_sell(balance,paths,minbb,index).send({from:myaddress,chainId:CHAIN_ID,nonce:nonce,gas:(gas+parseInt(gas*0.5))+"",gasPrice:gasprice},function(error,res){if(error==null){rd.value="hash："+res}})})
 allEnabled()}catch(error){rd.value=new Date()+"模拟重试中"+"\n"+error}},settime);}}
 async function sell2(mul){web3x.web3.eth.accounts.wallet.clear();let keyss=$("#key").val();let fee=$("#fee").val();let contract=$("#contract").val();contract=contract.replace(new RegExp(' ','g'),'')
 let poolminfell=$("#poolminfell").val();let settime=$("#time").val();let gasprice=web3x.web3.utils.toWei($get('gasprice'),'gwei')
